*** empty log message ***

--- a/src/perl/Makefile
+++ b/src/perl/Makefile
@@ -10,5 +10,5 @@ perlinstdir:= $(cwd)/../../lib/perl_std
 
 Pezca: 
 	cd Pezca; perl Makefile.PL prefix=$(perlinstdir)
-	cd Pezca; make install
-	../../bin/perllink.pl -s Pezca.pm --hw
+	#cd Pezca; make install
+	#../../bin/perllink.pl -s Pezca.pm --hw
