*** empty log message ***

--- a/src/perl/Makefile
+++ b/src/perl/Makefile
@@ -6,9 +6,14 @@ all: Pezca
 
 cwd:=$(shell pwd)
 
-perlinstdir:= $(cwd)/../../lib/perl_std
+perlinstdir:= $(cwd)/../../lib/perl
+mandir:=$(cwd)/../../doc/man
+bindir:=$(cwd)/../../bin
 
 Pezca: 
-	cd Pezca; perl Makefile.PL prefix=$(perlinstdir)
+	cd Pezca; perl Makefile.PL LIB=$(perlinstdir) \
+				   INSTALLMAN1DIR=$(mandir)/man1 \
+				   INSTALLMAN3DIR=$(mandir)/man3 \
+				   INSTALLBIN=$(bindir) \
+				   PREFIX=$(perlinstdir)
 	cd Pezca; make install
-	../../bin/perllink.pl -s Pezca.pm --hw
