*** empty log message ***

--- a/lib/perl/Makefile
+++ b/lib/perl/Makefile
@@ -6,10 +6,7 @@ mandir:=$(cwd)/../../doc/man
 man3dir:=$(mandir)/man3
 
 
-install all: $(man3dir) $(man3dir)/idcp_data.3 $(man3dir)/canlink.3
-
-$(man3dir):
-	cd $(mandir); mkdir $(man3dir)
+install all: $(man3dir)/idcp_data.3 $(man3dir)/canlink.3
 
 
 $(man3dir)/%.3 : %.pm
