parse_db.pm: a parser for db-files (EPICS)
parse_db.pm: a parser for db-files (EPICS)
parse_subst.pm: a parser for substitution files (EPICS)

--- a/lib/perl/Makefile
+++ b/lib/perl/Makefile
@@ -1,11 +1,16 @@
 .DEFAULT:
+.SUFFIXES:
 
 cwd:=$(shell pwd)
 
 mandir:=$(cwd)/../../doc/man
 man3dir:=$(mandir)/man3
 
-install all: $(man3dir)/idcp_data.3 $(man3dir)/canlink.3
+modules:= idcp_data canlink parse_db parse_subst
+
+manpages:=$(addprefix $(man3dir)/,$(addsuffix .3,$(modules)))
+
+install all: $(manpages)
 
 $(man3dir)/%.3 : %.pm
 	pod2man $< > $@
