html documentation was added

--- a/lib/perl/Makefile
+++ b/lib/perl/Makefile
@@ -3,6 +3,8 @@
 
 cwd:=$(shell pwd)
 
+htmldir:=$(cwd)/../../doc/html
+
 mandir:=$(cwd)/../../doc/man
 man3dir:=$(mandir)/man3
 
@@ -10,7 +12,12 @@ modules:= idcp_data canlink parse_db parse_subst
 
 manpages:=$(addprefix $(man3dir)/,$(addsuffix .3,$(modules)))
 
-install all: $(manpages)
+htmlfiles:=$(addprefix $(htmldir)/,$(addsuffix .html,$(modules)))
+
+install all: $(manpages) $(htmlfiles)
 
 $(man3dir)/%.3 : %.pm
 	pod2man $< > $@
+
+$(htmldir)/%.html : %.pm
+	pod2html $< > $@
