--- a/src/perl/Pezca/Makefile.PL.ontop
+++ b/src/perl/Pezca/Makefile.PL.ontop
@@ -4,11 +4,10 @@ use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 
-use platform 
+use platform_ontop 
   qw(pl_includes pl_defines pl_dir pl_libdirs
      pl_libs pl_objects
-     pl_mk_includes
-     pl_platform_includes pl_libcom_subdirs pl_dump);
+     pl_dump);
 
 # *****************************************************************
 
@@ -22,6 +21,7 @@ my %options=
     'DEFINE' 	   => pl_defines(),
     'LIBS'         => join(" ",pl_libdirs(),pl_libs()),
     'OBJECT' 	   => pl_objects(),
+    'DIR' => [],
   );
   
 my $dirs= pl_dir();
