Build HTML documentation always in a sub-directory "bii_scripts".
When variable HTML_INSTALL_DIR is defined, install HTML documentation in
directory $(HTML_INSTALL_DIR)/bii_scripts.

--- a/config
+++ b/config
@@ -47,5 +47,5 @@ PYTHON3LIB_INSTALL_DIR=$(INSTALL_PREFIX)/lib/python
 
 # Directory where the html documentation is installed. If empty, do not
 # install html documentation:
-HTML_INSTALL_DIR=$(INSTALL_PREFIX)/share/html/bii_scripts
+HTML_INSTALL_DIR=$(INSTALL_PREFIX)/share/html
 
