--- a/config
+++ b/config
@@ -7,19 +7,18 @@
 # Rsync configuration for program, library and share files installation:
 # Rsync destination, may be "localhost", HOST or USER@HOST. If left empty
 # do not use ssh for rsync:
-INSTALL_RSYNC_HOST=localhost
+INSTALL_RSYNC_HOST=
 # Rsync options, you usually don't have to change these:
-INSTALL_RSYNC_OPTS=-crlEogC --chmod=Fa+r 
+INSTALL_RSYNC_OPTS=-crlEC --chmod=Fa+r
 # Directory creation command. A make function, $(1) is the directory list:
 INSTALL_MKDIR=mkdir -m 775 -p $(1)
 
 # Rsync configuration HTML file installation:
 # Rsync destination, may be "localhost", HOST or USER@HOST. If left empty
 # do not use ssh for rsync:
-HTML_RSYNC_HOST=localhost
+HTML_RSYNC_HOST=
 # Rsync options, you usually don't have to change these:
-HTML_RSYNC_OPTS=-crlEogC --chmod=Fa+r 
-
+HTML_RSYNC_OPTS=-crlEC --chmod=a+r,Da+x
 # Directory creation command. A make function, $(1) is the directory list:
 HTML_MKDIR=mkdir -m 775 -p $(1)
 
