Bugfix: SETENV-RUN-LOCAL.sh didn't work with bii_scripts.config.
When you source SETENV-RUN-LOCAL.sh you can run scripts directly from the
bii_scripts working copy directory. The bug prevented some scripts from finding
the bii_scripts share directory.

--- a/bin/bii_scripts.config
+++ b/bin/bii_scripts.config
@@ -1,6 +1,6 @@
-INSTALL_PREFIX=$TOP
-SHARE_INSTALL_DIR=$TOP/share
-SCRIPT_INSTALL_DIR=$TOP/bin
-PERLLIB_INSTALL_DIR=$TOP/lib/perl
-PYTHON2LIB_INSTALL_DIR=$TOP/lib/python
-PYTHON3LIB_INSTALL_DIR=$TOP/lib/python
+INSTALL_PREFIX=$BII_SCRIPTS_TOP
+SHARE_INSTALL_DIR=$BII_SCRIPTS_TOP/share
+SCRIPT_INSTALL_DIR=$BII_SCRIPTS_TOP/bin
+PERLLIB_INSTALL_DIR=$BII_SCRIPTS_TOP/lib/perl
+PYTHON2LIB_INSTALL_DIR=$BII_SCRIPTS_TOP/lib/python
+PYTHON3LIB_INSTALL_DIR=$BII_SCRIPTS_TOP/lib/python
