Added host "tarn" to iddb configuration file.

--- a/share/bii_scripts/iddb.config
+++ b/share/bii_scripts/iddb.config
@@ -6,6 +6,7 @@
 # '*' is a default when no other match is found
 
 * = 
+tarn = server:gwc2c.acc.bessy.de:7643
 orange = server:gwc2c.acc.bessy.de:7643
 
 [DOMAINS]
