Small change in iddb configuration.

--- a/share/bii_scripts/iddb.config
+++ b/share/bii_scripts/iddb.config
@@ -7,6 +7,7 @@
 
 * = 
 tarn = server:gwc2c.acc.bessy.de:7643
+tarn.local = server:gwc2c.acc.bessy.de:7643
 orange = server:gwc2c.acc.bessy.de:7643
 
 [DOMAINS]
